SOC-2602 | Fixing replies editor on safari, leaking state and more things

--- a/front/main/app/styles/module/_discussion.scss
+++ b/front/main/app/styles/module/_discussion.scss
@@ -780,6 +780,7 @@ body.discussions {
 	from {
 		height: 0;
 		margin: 0;
+		opacity: 0;
 		overflow: hidden;
 		padding: 0;
 	}
@@ -787,6 +788,7 @@ body.discussions {
 	to {
 		height: 0;
 		margin: 0;
+		opacity: 0;
 		overflow: hidden;
 		padding: 0;
 	}
